Playback feature there; still buggy
Known issues: Opening multiple timeline tabs
leads to all timelines except the first/last one that
was openend to have a too small image canvas that
is used for playback. This issue disapears temporarily
if the window is resized.

--- a/css/custom.css
+++ b/css/custom.css
@@ -98,8 +98,8 @@ div[id^="inputCheckBoxPanelcheckbox"] > .row:first-child{
 
 .extandable-tab-list-ref li.active > a
 {
-	/*color : white;*/
-	/*background-color: #428bca;*/
+	color : white;
+	background-color: #428bca;
 	border-radius: 0 0 10px 10px;
 	/*font-weight: bold;*/
 }
@@ -254,7 +254,7 @@ textarea {
 }
 
 .playercontainer {
-	height:50%;
+	height:60%;
 	width:80%;
 }
 
